--- a/starbase-router/index.css
+++ b/starbase-router/index.css
@@ -12,3 +12,10 @@ body{
 .link, .link:hover, .link:active, .link:visited{
     color:#4fc090;
 }
+
+.item-card{
+    border:2px solid #4fc08d;
+    border-radius: 4px;
+    padding: 5px 5px 5px 10px; 
+    cursor: pointer;
+}
